--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "dotenv": "^16.0.3",
     "firebase": "^9.12.1",
     "html2pdf": "^0.0.11",
     "html2pdf.js": "^0.9.0",
