--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.4.0",
     "sweetalert2": "^11.6.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
