--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.4.0",
+    "react-stepper-js": "^1.0.4",
     "sweetalert2": "^11.6.0",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
