--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.14.2",
+    "@stripe/stripe-js": "^1.42.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -19,10 +21,10 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.38.0",
     "react-icons": "^4.6.0",
+    "react-progress-stepper": "^0.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.4.0",
-    "react-stepper-js": "^1.0.4",
     "sweetalert2": "^11.6.0",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
