--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-REACT_APP_KEY=Heellllllllllllllllooooo
+REACT_APP_API_KEY=AIzaSyBPBIi52I-jd35ucPtUy9uYTqmbYWC7JEs
+REACT_APP_AUTH_DOMAIN=mbstu-student-panel.firebaseapp.com
+REACT_APP_PROJECT_ID=mbstu-student-panel
+REACT_APP_STORAGE_BUCKET=mbstu-student-panel.appspot.com
+REACT_APP_MESSAGING_SENDER_ID=208695124755
+REACT_APP_APP_ID=1:208695124755:web:19304c5992bdda82f6b0e6
