--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "bootstrap": "^5.2.2",
     "compressorjs": "^1.1.1",
     "dotenv": "^16.0.3",
-    "firebase": "^9.12.1",
+    "firebase": "^9.13.0",
+    "html2canvas": "^1.4.1",
     "html2pdf": "^0.0.11",
     "html2pdf.js": "^0.9.0",
+    "jspdf": "^2.5.1",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.5.0",
