--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.5.0",
+    "react-countup": "^6.3.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.38.0",
     "react-icons": "^4.6.0",
     "react-progress-stepper": "^0.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "react-scroll-trigger": "^0.6.14",
     "react-select": "^5.4.0",
     "sweetalert2": "^11.6.0",
     "web-vitals": "^2.1.4",
